[workspace]
resolver = "2"
members = [
    "bridge-cli",
    "bridge-sdk/eth-proof",
    "bridge-sdk/near-rpc-client",
    "bridge-sdk/near-light-client-on-eth",
    "bridge-sdk/connectors/nep141-connector",
    "bridge-sdk/connectors/eth-connector",
    "bridge-sdk/connectors/bridge-connector-common",
    "bridge-sdk/connectors/fast-bridge",
]

[workspace.dependencies]
borsh = "1.5.1"
thiserror = "1.0.61"
ethers = "2.0.14"
ethers-core = "2.0.14"
ethereum-types = "0.14.1"
tokio = { version = "1.38.0", features = ["full"]}
serde = { version = "1.0" }
hex = "0.4.3"
serde_json = "1.0.117"
reqwest = { version = "0.11", features = ["json"] }
cita_trie = "5.0.1"
rlp = "0.5.2"
hasher = "0.1.4"
lazy_static = "1.4.0"
near-jsonrpc-client = "0.9.0"
near-jsonrpc-primitives = "0.21.0"
near-primitives = "0.21.0"
near-crypto = "0.21.0"
derive_builder = "0.20.0"
clap = { version = "4.5", features = ["derive"] }
dotenv = { version = "0.15" }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
omni-types = { git = "https://github.com/near-one/omni-bridge", package = "omni-types" }
