[package]
name = "bridge-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = { version = "0.15" }
nep141-connector = { path = "../bridge-sdk/connectors/nep141-connector" }
eth-connector = { path = "../bridge-sdk/connectors/eth-connector" }
ethers-core = "2.0.14"
near-primitives.workspace = true