[package]
name = "bridge-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.5.0"
config = "0.14.0"
ethereum-types = "0.14.1"
ethers = "2.0.14"
ethers-core = "2.0.14"
hex = "0.4.3"
near-crypto = "0.21.0"
near-jsonrpc-client = "0.9.0"
near-primitives = "0.21.0"
thiserror = "1.0.61"
tokio = { version = "1", features = ["full"] }
derive_builder = "0.20.0"
eth-proof = { path = "../eth-proof" }
near-rpc-client = { path = "../near-rpc-client" }