[package]
name = "eth-proof"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "1.5.0", features = ["derive"] }
cita_trie = "5.0.1"
rlp = "0.5.2"
hasher = "0.1.4"
ethereum-types = "0.14.1"
tokio = { version = "1.38.0", features = ["full"]}
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1"