[package]
name = "eth-proof"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh.workspace = true
thiserror.workspace = true
tokio.workspace = true
ethereum-types.workspace = true
serde.workspace = true
hex.workspace = true
cita_trie.workspace = true
rlp.workspace = true
hasher.workspace = true
eth-rpc-client = { path = "../eth-rpc-client" }

[dev-dependencies]
serde_json.workspace = true