[package]
name = "near-rpc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror.workspace = true
tokio.workspace = true
serde_json.workspace = true
reqwest.workspace = true
lazy_static.workspace = true
near-jsonrpc-client.workspace = true
near-jsonrpc-primitives.workspace = true
near-primitives.workspace = true
near-crypto.workspace = true