[package]
name = "bridge-connector-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
ethers.workspace = true
borsh.workspace = true
serde_json.workspace = true
eth-proof = { path = "../../eth-proof" }
eth-rpc-client = { path = "../../eth-rpc-client" }
near-rpc-client = { path = "../../near-rpc-client" }
near-light-client-on-eth = { path = "../../near-light-client-on-eth" }