[package]
name = "eth-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-primitives.workspace = true
ethers.workspace = true
thiserror.workspace = true
derive_builder.workspace = true
hex.workspace = true
borsh.workspace = true
near-crypto.workspace = true
tracing.workspace = true
eth-proof = { path = "../../eth-proof" }
near-rpc-client = { path = "../../near-rpc-client" }
near-light-client-on-eth = { path = "../../near-light-client-on-eth" }
bridge-connector-common = { path = "../bridge-connector-common" }
