[package]
name = "fast-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_builder.workspace = true
near-primitives.workspace = true
borsh.workspace = true
tracing.workspace = true
near-crypto.workspace = true
ethers.workspace = true
base64.workspace = true
hex.workspace = true
serde_json.workspace = true
serde.workspace = true
tiny-keccak.workspace = true
eth-proof = { path = "../../eth-proof" }
bridge-connector-common = { path = "../bridge-connector-common" }
near-rpc-client = { path = "../../near-rpc-client" }