[package]
name = "nep141-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh.workspace = true
ethers.workspace = true
hex.workspace = true
near-crypto.workspace = true
near-jsonrpc-client.workspace = true
near-primitives.workspace = true
derive_builder.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
omni-types.workspace = true
eth-proof = { path = "../../eth-proof" }
near-rpc-client = { path = "../../near-rpc-client" }
near-light-client-on-eth = { path = "../../near-light-client-on-eth" }
bridge-connector-common = { path = "../bridge-connector-common" }
